added preview of project section

--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ main{
 }
 /* NavBar && hyperlinks */
 header {
-  background-color: #2b2b2b;
+  background-color: #130c3a;
   position: fixed;
   top: 0;
   left: 0;
@@ -17,7 +17,7 @@ header {
 }
 header * {
   display: inline-block;
-  font-size: 0.75em;
+  font-size: calc(6px + 0.8vw);
 }
 header li{
   margin: 5 px;
@@ -53,7 +53,7 @@ main{
 
 #nav-list a{
   transition: all 0.25s ease!important;
-  color: #a7a7a7!important;
+  color: #c0c0c0!important;
 }
 #nav-list a:hover{
   transform: translateY(5px)!important;
@@ -73,32 +73,94 @@ a:link{
 }
 
 /* Welcome section */
-h1{
-  font-family: 'Mukta', sans-serif;
+#welcome-section{
+  margin-top: 80px;
 }
-h3{
+#welcome-container h1{
+  font-family: 'Mukta', sans-serif;
+  font-size: calc(6px + 5vw);
+}
+#welcome-container h3{
   font-family: 'Roboto Mono', monospace;
   font-weight: 200;
   font-style: italic;
+  font-size: calc(6px + 2.5vw);
 }
 /* 
 ToDo
 1. about section
-2. projects section
-3. link a CV en LaTeX
-4. general styling
+2. @ projects section
+  re-host heroku pomodoro App @ villagrat-pomodoro-clock
+  correct ze link @  Ir a la página del proyecto
+3. Iconos de stack tecnologico
+4. link a CV en LaTeX
+5. general styling
 */
 /* About section */
 
 
 /* Portfolio/projects section */
+img {
+  max-width: 100%;
+  max-height: 100%;
+}
 #projects-section{
-  margin-top: 30px;
+  align-items: center;
+  flex-direction: column;
+  margin-top: 50px;
+}
+.projects-container{
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: auto auto auto;
+  justify-content: space-evenly;
+  justify-items: center;
+  align-content: space-evenly;
+  align-items: center;
+}
+.project-tile{
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  margin: 10px;
+  width: 100%;
+  justify-content: space-evenly;
+  justify-items: center;
+  align-content: space-evenly;
+  align-items: center;
+  transition: all 0.25s ease;
+} 
+.project-tile:hover{
+  transform: scale(1.05, 1.05);
+}
+#project-link{
+  min-height: 40px;
+  height: 60%;
+  max-height: 100%;
+  min-width: 40px;
+  width: 65%;
+  max-width: 85%;
+}
+.project-image{
+  border-radius: 3px;
+  height: 100%;
+  width: 100%;
+}
+.project-title{
+  font-size: 1.6vw;
+  padding: 10px;
+  text-align: center;
+  font-family: 'Work Sans', sans-serif;
+  font-weight: 400;
+}
+div.relative{
+  position: relative;
+  top: 40px;
 }
 .projects-section-title h2{
-  font-family: 'Mukta', sans-serif;
-  font-weight: 50!important;
-  font-size: 2em;
+  font-family: 'Work Sans', sans-serif;
+  font-weight: 500!important;
+  font-size: calc(6px + 2.8vw)!important;
 }
 
 /* Contact Info Section */
