--- a/style.css
+++ b/style.css
@@ -83,7 +83,7 @@ a:link{
 /* Welcome section */
 #welcome-section{
   margin-top: 80px;
-  margin-bottom: 80px;
+  margin-bottom: 180px;
 }
 #welcome-container h1{
   font-family: 'Mukta', sans-serif;
@@ -105,15 +105,14 @@ img {
 #projects-section{
   align-items: center;
   flex-direction: column;
+  padding-bottom: 50px;
   padding-top: 50px;
   margin-top: -50px;
   margin-bottom: 30px;
-  /* 
-  aplicar un cambio sutil de color a title y a project-section-title
-                                               project-container
+  margin-left: -1%;
+  margin-right: -1%;
+  border-radius: 25px;
   background-color: #d2d3d5; 
-  expandir el bg color a los costados, simil a como hacemos con el footer
-  */
 }
 .projects-container{
   display: grid;
@@ -136,9 +135,54 @@ img {
   align-items: center;
   transition: all 0.25s ease;
 } 
+
 .project-tile:hover{
   transform: scale(1.05, 1.05);
 }
+.project-tile:hover + .project-tile-desc{
+  animation: fadeIn linear 1.5s;
+  display: block;
+  color: black;
+}
+@keyframes fadeIn {
+  0% {opacity:0;}
+  100% {opacity:1;}
+}
+.project-tile-desc{
+  display: none;
+}
+.project-tile-desc li{
+  font-family: 'Titillium Web', sans-serif;
+}
+.project-tile-desc p{
+  font-family: 'Mukta', sans-serif;
+}
+.pomodoro-pos{
+  position: absolute;
+  margin-top: -20%;
+  margin-left: -34%;
+}
+.calculator-pos{
+  position: absolute;
+  margin-top: -20%;
+  margin-left: 28%;
+}
+.drum-pos{
+  position: absolute;
+  margin-top: 15%;;
+  margin-left: 60%;
+}
+.quote-pos{
+  position: absolute;
+  margin-top: 26%;;
+  margin-left: -34%;
+}
+.markdown-pos{
+  position: absolute;
+  margin-top: 26%;;
+  margin-left: 28%;
+}
+
 #project-link{
   min-height: 40px;
   height: 60%;
@@ -241,9 +285,9 @@ div.relative{
 #contact-section {
   box-sizing: border-box;
   display: flex;
-  margin-left: -10%;
-  margin-right: -10%;
-  margin-bottom: -10%;
+  margin-left: -4%;
+  margin-right: -4%;
+  margin-bottom: -4%;
   background-color: #043442;
   flex-direction: column;
   justify-content: center;
